# Universal-Parser

./: .gitignore  CMDsREADME.md  README.md  pyproject.toml  requirements.txt
examples/: java.java  python.py  test.cpp
grammars/: cpp.js
parser/: parse_single_file.py
queries/definition/: cpp.txt  python.txt
queries/dependence/: python.txt
queries/importation/: cpp.txt  java.txt  python.txt
src/: config.json  config.py  llm_services.py  logger.py  parse_repository.py  parse_single_file.py  patterns.py  schema.py
tests/: convert_gitprobe_to_aggregated.py  evaluate.py  load_to_neo4j.py  neo4j_service.py  parse_repo_using_gitgrobe.py  test.py
titan-sight/titan-sight/: parse_metadata.json
universal_parser/: __init__.py  cli.py  config.py  incremental.py  llm_services.py  logger.py  parse_repository.py  parse_single_file.py  schema.py
universal_parser/analyzing/: __init__.py  definition_analyzer.py  file_summary.py  graph_analyzer.py  khop_analyzer.py
universal_parser/core/: __init__.py  config.py  models.py
universal_parser/parsing/: __init__.py  incremental.py  patterns.py  repository.py  single_file.py
universal_parser/utils/: __init__.py  llm.py  logger.py  utils.py
unused/: convert_gitprobe_to_aggregated.py  llm_services.py  neo4j_service.py
